<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop it for me</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Your name..</string>
    <string name="button_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="shop">Shop</string>
    <string name="selectorg">Organization</string>
    <string name="selectbudget">Budget</string>
    <string name="whattodonate">What to Donate</string>
    <string name="quantity">Quantity</string>
    <string name="seekvalue">$0</string>
    <string name="selectdate">Ship by date</string>
    <string name="newreg">New to Shop it for me? Register here</string>
    <string name="title_activity_grid">Categories</string>
    <string name="title_activity_select">Select</string>
    <string name="org_prompt">Choose your organization</string>
    <string name="thankyou">Thank you for donating</string>
    <string name="nothing"></string>
    <string name="shipped">Shipping Summary</string>
    <string name="color">#FF6666</string>

    <string-array name="org_arrays">
        <item>Goodwill of Silicon Valley</item>
        <item>Teens for Green</item>
        <item>Breakthrough Silicon Valley</item>
        <item>Planet Aid, Inc</item>
    </string-array>

    <string name="title_activity_confirmation">Donation Summary</string>

</resources>
