<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectactivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ohackback"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:text="@string/selectorg"
        android:textSize="20sp" />
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/org_arrays"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:prompt="@string/org_prompt" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:text="@string/selectbudget"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/seekvalue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/seekvalue" />
    
     <SeekBar
        android:id="@+id/seek1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="@+id/seekvalue"
        android:max="1000" />
     
     <EditText
        android:id="@+id/whattodonate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:hint="@string/whattodonate"
        android:singleLine="true" >
    </EditText>
    
     <EditText
        android:id="@+id/quantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:hint="@string/quantity"
        android:singleLine="true" >
    </EditText>
    
     <EditText
        android:id="@+id/selectDate"
        android:inputType="date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:hint="@string/selectdate"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:onClick="shop"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="@string/shop" />
    

    
</LinearLayout>
